Added new questions

--- a/public/index.html
+++ b/public/index.html
@@ -33,8 +33,8 @@
     <meta content="%PUBLIC_URL%/favicon.ico" property="og:image">
 
     <!-- The title meta property will be modified dynamically for each challenge: -->
-    <meta content="Learn JavaScript and coding!" property="og:title">
-    <meta content="Learn JavaScript and coding with easy multiple choice questions!" property="og:description">
+    <meta content="Programozás alapok" property="og:title">
+    <meta content="Kvízalkalmazás programozási alapok felmérésére." property="og:description">
 
     <script src="%PUBLIC_URL%/assets/prism.js"></script>
   </head>
